Fixed the font size on smaller devices

--- a/src/components/LoginAndSignUp.module.scss
+++ b/src/components/LoginAndSignUp.module.scss
@@ -432,6 +432,28 @@
         top: 87%;
         form {
           padding: 0 3rem;
+
+          .title {
+            font-size: 1.9rem;
+          }
+
+          .input_field {
+            input::placeholder {
+              font-size: 0.95rem;
+            }
+          }
+
+          .buttons {
+            .btn {
+              width: 130px;
+              font-size: 0.9rem;
+            }
+
+            .btn_back {
+              width: 170px;
+              padding-top: 13px;
+            }
+          }
         }
       }
     }
@@ -451,8 +473,32 @@
     .forms_container {
       .signin_signup {
         form {
+          .title {
+            font-size: 1.7rem;
+          }
+
+          .input_field {
+            i {
+              font-size: 0.9rem;
+            }
+
+            input::placeholder {
+              font-size: 0.8rem;
+            }
+          }
           .buttons {
             flex-direction: column;
+
+            .btn {
+              width: 110px;
+              height: 46px;
+              font-size: 0.8rem;
+            }
+
+            .btn_back {
+              width: 155px;
+              padding-top: 13px;
+            }
 
             input {
               margin-left: auto;
